crates/paladin-auth-core/tests/trybuild/secret_not_debug.stderr
error[E0277]: `Secret` doesn't implement `Debug`
 --> tests/trybuild/secret_not_debug.rs:9:22
  |
9 |     requires_debug::<paladin_auth_core::Secret>();
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Debug` is not implemented for `Secret`
  |
note: required by a bound in `requires_debug`
 --> tests/trybuild/secret_not_debug.rs:6:22
  |
6 | fn requires_debug<T: std::fmt::Debug>() {}
  |                      ^^^^^^^^^^^^^^^ required by this bound in `requires_debug`
